answered question for 01

--- a/modeling/actividad_01/01.ipynb
+++ b/modeling/actividad_01/01.ipynb
@@ -8,6 +8,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Considere un juego de disparejo entre cuatro jugadores, en el que cada jugador adopta la siguiente estrategia:\n",
+    "- El jugador 1 siempre escoge al azar entre las dos opciones.\n",
+    "- El jugador 2 escoge siempre hacia abajo sin importar lo que haya ocurrido anteriormente.\n",
+    "- El jugador 3 escoge la última opción ganadora de las partidas anteriores. En la primera jugada, escoge arriba.\n",
+    "- El jugador 4 escoge aquello opuesto al jugador 1 en la última partida. En la primera jugada, escoge al azar.\n",
+    "Utilice ```AgentPy``` para generar una simulación del juego, y simule 1000 juegos consecutivos. Muestre los resultados obtenidos para cada uno de los jugadores al final de la simulación.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -136,11 +150,13 @@
     "            for i in range(4):\n",
     "                if HISTORY[\"plays\"][-1][i] == 2:\n",
     "                    HISTORY[\"winners\"].append(i + 1)\n",
+    "                    break\n",
     "        elif np.count_nonzero(results) == 3:\n",
     "            HISTORY[\"last_win\"] = 1\n",
     "            for i in range(4):\n",
     "                if HISTORY[\"plays\"][-1][i] == 1:\n",
-    "                    HISTORY[\"winners\"].append(i + 1)\n"
+    "                    HISTORY[\"winners\"].append(i + 1)\n",
+    "                    break\n"
    ]
   },
   {
@@ -180,7 +196,7 @@
      "output_type": "stream",
      "text": [
       "Completed: 1000 steps\n",
-      "Run time: 0:00:00.124898\n",
+      "Run time: 0:00:00.142021\n",
       "Simulation finished\n"
      ]
     },
@@ -221,11 +237,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#1. Player 02 (winner 185 times)\n",
-      "#2. Player 03 (winner 128 times)\n",
-      "#3. Player 01 (winner 127 times)\n",
-      "#4. Player 04 (winner 57 times)\n",
-      "-> 503 times were played without a winner\n"
+      "#1. Player 02 (winner 190 times)\n",
+      "#2. Player 01 (winner 137 times)\n",
+      "#3. Player 03 (winner 136 times)\n",
+      "#4. Player 04 (winner 53 times)\n",
+      "-> 484 times were played without a winner\n"
      ]
     }
    ],
@@ -254,25 +270,25 @@
     {
      "data": {
       "text/plain": [
-       "[[2, 2, 1, 2],\n",
+       "[[1, 2, 1, 1],\n",
+       " [1, 2, 2, 2],\n",
+       " [1, 2, 1, 2],\n",
+       " [2, 2, 1, 2],\n",
        " [2, 2, 1, 1],\n",
        " [2, 2, 1, 1],\n",
+       " [1, 2, 1, 1],\n",
+       " [1, 2, 2, 2],\n",
+       " [2, 2, 1, 2],\n",
        " [1, 2, 1, 1],\n",
        " [2, 2, 2, 2],\n",
-       " [1, 2, 2, 1],\n",
+       " [2, 2, 2, 1],\n",
+       " [1, 2, 1, 1],\n",
        " [1, 2, 2, 2],\n",
        " [1, 2, 1, 2],\n",
        " [1, 2, 1, 2],\n",
+       " [1, 2, 1, 2],\n",
        " [2, 2, 1, 2],\n",
        " [2, 2, 1, 1],\n",
-       " [2, 2, 1, 1],\n",
-       " [1, 2, 1, 1],\n",
-       " [1, 2, 2, 2],\n",
-       " [2, 2, 1, 2],\n",
-       " [2, 2, 1, 1],\n",
-       " [1, 2, 1, 1],\n",
-       " [1, 2, 2, 2],\n",
-       " [2, 2, 1, 2],\n",
        " [1, 2, 1, 1]]"
       ]
      },
@@ -283,6 +299,19 @@
    ],
    "source": [
     "HISTORY[\"plays\"][:20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preguntas\n",
+    "\n",
+    "**¿Qué jugador obtuvo mejores resultados?**\n",
+    "- Los mejores resultados, por un amplio margen, los obtuvo el jugador 02. Este jugador siempre tomaba la misma posición sin importar los resultados anteriores o lo que pusieran los demás jugadores. Esto lo podemos ver en la penúltima celda, donde vemos las veces que ganó cada uno de los jugadores de las 1000 veces que se realizó el juego.\n",
+    "\n",
+    "**¿Alguna de las estrategias fue mejor que las otras?**\n",
+    "- La mejor estrategia fue claramente siempre poner la mano para abajo (la misma posición en todos los juegos). Repetimos el experimento más de 5 veces y siempre el jugador 02 fue el vencedor, además de que por un amplio margen."
    ]
   },
   {
