--- a/modeling/actividad_01/01.ipynb
+++ b/modeling/actividad_01/01.ipynb
@@ -327,7 +327,7 @@
    "hash": "5a7cf388ada1142174c72c5ff510364c98ccfe89c44fe6a7e8817c278f125490"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('venv': venv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -342,8 +342,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
