--- a/reto/model.ipynb
+++ b/reto/model.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Modelo Reto\n",
-    "---"
+    "\n",
+    "---\n"
    ]
   },
   {
@@ -13,14 +14,15 @@
    "metadata": {},
    "source": [
     "## Instrucciones\n",
-    "<Descripción del Problema>"
+    "\n",
+    "<Descripción del Problema>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solución"
+    "## Solución\n"
    ]
   },
   {
@@ -28,12 +30,13 @@
    "metadata": {},
    "source": [
     "### Importar librerías\n",
-    "Se importan las librerías necesarias para el entorno y el agente."
+    "\n",
+    "Se importan las librerías necesarias para el entorno y el agente.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +46,8 @@
     "\n",
     "# Librearías de Visualización y otros\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use('ggplot')"
+    "\n",
+    "plt.style.use(\"ggplot\")\n"
    ]
   },
   {
@@ -51,60 +55,117 @@
    "metadata": {},
    "source": [
     "### Definición de las clases\n",
-    "Se define la clase agente ``TrafficLight``, la cuál se encarga de simular a los semáforos, y la clase de modelo ``TrafficLightModel``, la cuál se encarga de simular el entorno."
+    "\n",
+    "Se define la clase agente `TrafficLight`, la cuál se encarga de simular a los semáforos, y la clase de modelo `TrafficLightModel`, la cuál se encarga de simular el entorno.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "class TrafficLight(ap.Agent):\n",
+    "    def setup(self):\n",
+    "        self.state = 0\n",
+    "        self.states = [\"red\", \"green\", \"yellow\"]\n",
+    "        self.updateState()\n",
+    "        self.time = 0\n",
+    "        self.time_limits = self.p.traffic_times\n",
     "\n",
-    "  def setup(self):\n",
-    "    self.state = 0\n",
-    "    self.states = ['red', 'green', 'yellow']\n",
-    "    self.updateState()\n",
-    "    self.time = 0\n",
-    "    self.time_limits = self.p.traffic_times\n",
-    "  \n",
-    "  def act(self):\n",
-    "    self.time += 1\n",
-    "    if self.time == self.time_limits[self.state]:\n",
-    "      self.time = 0\n",
-    "      self.state = (self.state + 1) % 3\n",
-    "      self.updateState()\n",
-    "  \n",
-    "  def updateState(self):\n",
-    "    self.current_state = self.states[self.state]\n"
+    "    def act(self):\n",
+    "        self.time += 1\n",
+    "        if self.time == self.time_limits[self.state]:\n",
+    "            self.time = 0\n",
+    "            self.state = (self.state + 1) % 3\n",
+    "            self.updateState()\n",
+    "\n",
+    "    def updateState(self):\n",
+    "        self.current_state = self.states[self.state]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TrafficLightModel(ap.Model):\n",
+    "class Car(ap.Agent):\n",
+    "    def setup(self):\n",
+    "        self.speed = 0\n",
+    "        self.max_speed = 10\n",
+    "        self.direction = 0\n",
+    "        self.objective = 0\n",
+    "        self.rotation = 0\n",
+    "        self.x = -500\n",
+    "        self.z = -500\n",
     "\n",
-    "  def setup(self):\n",
-    "    self.trafficAgents = ap.AgentList(self, self.p.traffic_lights, TrafficLight)\n",
-    "    self.trafficAgents.state = ap.AttrIter([1, 1, 0, 0])\n",
-    "    self.trafficAgents.updateState()\n",
-    "  \n",
-    "  def step(self):\n",
-    "    self.trafficAgents.act()\n",
-    "  \n",
-    "  def update(self):\n",
-    "    states = np.array(self.trafficAgents.state)\n",
-    "    stateNames = np.array(self.trafficAgents.current_state)\n",
+    "    def act(self):\n",
+    "        if (\n",
+    "            self.model.trafficAgents[0].current_state == \"green\"\n",
+    "            and self.speed < self.max_speed\n",
+    "        ):\n",
+    "            self.speed += 1\n",
     "\n",
-    "    self.record(\"State\", states)\n",
-    "    self.record(\"State Names\", stateNames)\n",
-    "  \n",
-    "  def end(self):\n",
-    "    pass"
+    "        # Update Position\n",
+    "        if self.direction == 0:\n",
+    "            self.x += self.speed\n",
+    "        elif self.direction == 1:\n",
+    "            self.z += self.speed\n",
+    "        elif self.direction == 2:\n",
+    "            self.z -= self.speed\n",
+    "        elif self.direction == 3:\n",
+    "            self.x -= self.speed\n",
+    "\n",
+    "        #! TODO: Just slow down or stop if close to a traffic light\n",
+    "\n",
+    "        # If yellow light, slow down\n",
+    "        if self.model.trafficAgents[0].current_state == \"yellow\":\n",
+    "            self.speed -= 1\n",
+    "            if self.speed < 0:\n",
+    "                self.speed = 0\n",
+    "\n",
+    "        # If red light, stop\n",
+    "        if self.model.trafficAgents[0].current_state == \"red\":\n",
+    "            self.speed = 0\n",
+    "\n",
+    "        #! TODO: Slow down if close to another car\n",
+    "\n",
+    "        #! TODO: Update direction if in marked area\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StreetModel(ap.Model):\n",
+    "    def setup(self):\n",
+    "        self.trafficAgents = ap.AgentList(self, self.p.traffic_lights, TrafficLight)\n",
+    "        self.trafficAgents.state = ap.AttrIter([1, 1, 0, 0])\n",
+    "        self.trafficAgents.updateState()\n",
+    "\n",
+    "        self.carAgents = ap.AgentList(self, self.p.cars, Car)\n",
+    "\n",
+    "    def step(self):\n",
+    "        self.trafficAgents.act()\n",
+    "        self.carAgents.act()\n",
+    "\n",
+    "    def update(self):\n",
+    "        states = np.array(self.trafficAgents.state)\n",
+    "        stateNames = np.array(self.trafficAgents.current_state)\n",
+    "\n",
+    "        carPositions = np.array([self.carAgents.x, self.carAgents.z])\n",
+    "        carSpeeds = np.array([self.carAgents.speed])\n",
+    "\n",
+    "        self.record(\"Traffic Light State\", states)\n",
+    "        self.record(\"Traffic Light State Names\", stateNames)\n",
+    "        self.record(\"Car Positions\", carPositions)\n",
+    "        self.record(\"Car Speeds\", carSpeeds)\n",
+    "\n",
+    "    def end(self):\n",
+    "        pass\n"
    ]
   },
   {
@@ -112,25 +173,27 @@
    "metadata": {},
    "source": [
     "### Simulación\n",
-    "Se definen los parámetros, se crea un objeto de la clase ``TrafficLightModel``, y se ejecuta la simulación."
+    "\n",
+    "Se definen los parámetros, se crea un objeto de la clase `TrafficLightModel`, y se ejecuta la simulación.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
     "parameters = {\n",
-    "  'traffic_lights': 4,         # Número de semáforos\n",
-    "  'traffic_times': [10, 7, 3], # Tiempos de cada estado\n",
-    "  'steps': 100                 # Número de pasos\n",
-    "}"
+    "    \"traffic_lights\": 4,  # Número de semáforos\n",
+    "    \"traffic_times\": [10, 7, 3],  # Tiempos de cada estado (red, green, yellow)\n",
+    "    \"cars\": 1,  # Número de autos\n",
+    "    \"steps\": 100,  # Número de pasos\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -138,19 +201,19 @@
      "output_type": "stream",
      "text": [
       "Completed: 100 steps\n",
-      "Run time: 0:00:00.026350\n",
+      "Run time: 0:00:00.055789\n",
       "Simulation finished\n"
      ]
     }
    ],
    "source": [
-    "model = TrafficLightModel(parameters)\n",
-    "results = model.run()"
+    "model = StreetModel(parameters)\n",
+    "results = model.run()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -174,11 +237,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>State</th>\n",
-       "      <th>State Names</th>\n",
+       "      <th>Traffic Light State</th>\n",
+       "      <th>Traffic Light State Names</th>\n",
+       "      <th>Car Positions</th>\n",
+       "      <th>Car Speeds</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>t</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -188,138 +255,201 @@
        "      <th>0</th>\n",
        "      <td>[1, 1, 0, 0]</td>\n",
        "      <td>[green, green, red, red]</td>\n",
+       "      <td>[[-500], [-500]]</td>\n",
+       "      <td>[[0]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>[1, 1, 0, 0]</td>\n",
        "      <td>[green, green, red, red]</td>\n",
+       "      <td>[[-499], [-500]]</td>\n",
+       "      <td>[[1]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>[1, 1, 0, 0]</td>\n",
        "      <td>[green, green, red, red]</td>\n",
+       "      <td>[[-497], [-500]]</td>\n",
+       "      <td>[[2]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>[1, 1, 0, 0]</td>\n",
        "      <td>[green, green, red, red]</td>\n",
+       "      <td>[[-494], [-500]]</td>\n",
+       "      <td>[[3]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>[1, 1, 0, 0]</td>\n",
        "      <td>[green, green, red, red]</td>\n",
+       "      <td>[[-490], [-500]]</td>\n",
+       "      <td>[[4]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>[1, 1, 0, 0]</td>\n",
        "      <td>[green, green, red, red]</td>\n",
+       "      <td>[[-485], [-500]]</td>\n",
+       "      <td>[[5]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>[1, 1, 0, 0]</td>\n",
        "      <td>[green, green, red, red]</td>\n",
+       "      <td>[[-479], [-500]]</td>\n",
+       "      <td>[[6]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>[2, 2, 0, 0]</td>\n",
        "      <td>[yellow, yellow, red, red]</td>\n",
+       "      <td>[[-473], [-500]]</td>\n",
+       "      <td>[[5]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>[2, 2, 0, 0]</td>\n",
        "      <td>[yellow, yellow, red, red]</td>\n",
+       "      <td>[[-468], [-500]]</td>\n",
+       "      <td>[[4]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>[2, 2, 0, 0]</td>\n",
        "      <td>[yellow, yellow, red, red]</td>\n",
+       "      <td>[[-464], [-500]]</td>\n",
+       "      <td>[[3]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>[0, 0, 1, 1]</td>\n",
        "      <td>[red, red, green, green]</td>\n",
+       "      <td>[[-461], [-500]]</td>\n",
+       "      <td>[[0]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>[0, 0, 1, 1]</td>\n",
        "      <td>[red, red, green, green]</td>\n",
+       "      <td>[[-461], [-500]]</td>\n",
+       "      <td>[[0]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>[0, 0, 1, 1]</td>\n",
        "      <td>[red, red, green, green]</td>\n",
+       "      <td>[[-461], [-500]]</td>\n",
+       "      <td>[[0]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>[0, 0, 1, 1]</td>\n",
        "      <td>[red, red, green, green]</td>\n",
+       "      <td>[[-461], [-500]]</td>\n",
+       "      <td>[[0]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>[0, 0, 1, 1]</td>\n",
        "      <td>[red, red, green, green]</td>\n",
+       "      <td>[[-461], [-500]]</td>\n",
+       "      <td>[[0]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>[0, 0, 1, 1]</td>\n",
        "      <td>[red, red, green, green]</td>\n",
+       "      <td>[[-461], [-500]]</td>\n",
+       "      <td>[[0]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>[0, 0, 1, 1]</td>\n",
        "      <td>[red, red, green, green]</td>\n",
+       "      <td>[[-461], [-500]]</td>\n",
+       "      <td>[[0]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>[0, 0, 2, 2]</td>\n",
        "      <td>[red, red, yellow, yellow]</td>\n",
+       "      <td>[[-461], [-500]]</td>\n",
+       "      <td>[[0]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>[0, 0, 2, 2]</td>\n",
        "      <td>[red, red, yellow, yellow]</td>\n",
+       "      <td>[[-461], [-500]]</td>\n",
+       "      <td>[[0]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>[0, 0, 2, 2]</td>\n",
        "      <td>[red, red, yellow, yellow]</td>\n",
+       "      <td>[[-461], [-500]]</td>\n",
+       "      <td>[[0]]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           State                 State Names\n",
-       "t                                           \n",
-       "0   [1, 1, 0, 0]    [green, green, red, red]\n",
-       "1   [1, 1, 0, 0]    [green, green, red, red]\n",
-       "2   [1, 1, 0, 0]    [green, green, red, red]\n",
-       "3   [1, 1, 0, 0]    [green, green, red, red]\n",
-       "4   [1, 1, 0, 0]    [green, green, red, red]\n",
-       "5   [1, 1, 0, 0]    [green, green, red, red]\n",
-       "6   [1, 1, 0, 0]    [green, green, red, red]\n",
-       "7   [2, 2, 0, 0]  [yellow, yellow, red, red]\n",
-       "8   [2, 2, 0, 0]  [yellow, yellow, red, red]\n",
-       "9   [2, 2, 0, 0]  [yellow, yellow, red, red]\n",
-       "10  [0, 0, 1, 1]    [red, red, green, green]\n",
-       "11  [0, 0, 1, 1]    [red, red, green, green]\n",
-       "12  [0, 0, 1, 1]    [red, red, green, green]\n",
-       "13  [0, 0, 1, 1]    [red, red, green, green]\n",
-       "14  [0, 0, 1, 1]    [red, red, green, green]\n",
-       "15  [0, 0, 1, 1]    [red, red, green, green]\n",
-       "16  [0, 0, 1, 1]    [red, red, green, green]\n",
-       "17  [0, 0, 2, 2]  [red, red, yellow, yellow]\n",
-       "18  [0, 0, 2, 2]  [red, red, yellow, yellow]\n",
-       "19  [0, 0, 2, 2]  [red, red, yellow, yellow]"
+       "   Traffic Light State   Traffic Light State Names     Car Positions  \\\n",
+       "t                                                                      \n",
+       "0         [1, 1, 0, 0]    [green, green, red, red]  [[-500], [-500]]   \n",
+       "1         [1, 1, 0, 0]    [green, green, red, red]  [[-499], [-500]]   \n",
+       "2         [1, 1, 0, 0]    [green, green, red, red]  [[-497], [-500]]   \n",
+       "3         [1, 1, 0, 0]    [green, green, red, red]  [[-494], [-500]]   \n",
+       "4         [1, 1, 0, 0]    [green, green, red, red]  [[-490], [-500]]   \n",
+       "5         [1, 1, 0, 0]    [green, green, red, red]  [[-485], [-500]]   \n",
+       "6         [1, 1, 0, 0]    [green, green, red, red]  [[-479], [-500]]   \n",
+       "7         [2, 2, 0, 0]  [yellow, yellow, red, red]  [[-473], [-500]]   \n",
+       "8         [2, 2, 0, 0]  [yellow, yellow, red, red]  [[-468], [-500]]   \n",
+       "9         [2, 2, 0, 0]  [yellow, yellow, red, red]  [[-464], [-500]]   \n",
+       "10        [0, 0, 1, 1]    [red, red, green, green]  [[-461], [-500]]   \n",
+       "11        [0, 0, 1, 1]    [red, red, green, green]  [[-461], [-500]]   \n",
+       "12        [0, 0, 1, 1]    [red, red, green, green]  [[-461], [-500]]   \n",
+       "13        [0, 0, 1, 1]    [red, red, green, green]  [[-461], [-500]]   \n",
+       "14        [0, 0, 1, 1]    [red, red, green, green]  [[-461], [-500]]   \n",
+       "15        [0, 0, 1, 1]    [red, red, green, green]  [[-461], [-500]]   \n",
+       "16        [0, 0, 1, 1]    [red, red, green, green]  [[-461], [-500]]   \n",
+       "17        [0, 0, 2, 2]  [red, red, yellow, yellow]  [[-461], [-500]]   \n",
+       "18        [0, 0, 2, 2]  [red, red, yellow, yellow]  [[-461], [-500]]   \n",
+       "19        [0, 0, 2, 2]  [red, red, yellow, yellow]  [[-461], [-500]]   \n",
+       "\n",
+       "   Car Speeds  \n",
+       "t              \n",
+       "0       [[0]]  \n",
+       "1       [[1]]  \n",
+       "2       [[2]]  \n",
+       "3       [[3]]  \n",
+       "4       [[4]]  \n",
+       "5       [[5]]  \n",
+       "6       [[6]]  \n",
+       "7       [[5]]  \n",
+       "8       [[4]]  \n",
+       "9       [[3]]  \n",
+       "10      [[0]]  \n",
+       "11      [[0]]  \n",
+       "12      [[0]]  \n",
+       "13      [[0]]  \n",
+       "14      [[0]]  \n",
+       "15      [[0]]  \n",
+       "16      [[0]]  \n",
+       "17      [[0]]  \n",
+       "18      [[0]]  \n",
+       "19      [[0]]  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results.variables.TrafficLightModel.head(20)"
+    "results.variables.StreetModel.head(20)\n"
    ]
   }
  ],
