:rocket: finished modeling

--- a/reto/model.ipynb
+++ b/reto/model.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,13 +135,12 @@
     "        self.current_state = self.states[state]\n",
     "        self.state = state\n",
     "        self.time = 0\n",
-    "        print(f\"updated light {self.id} to {self.current_state}\")\n",
     "        \n",
     "    def total_waiting_time(self):\n",
     "        \"\"\"\n",
     "        Regresa el tiempo total que los carros han esperado\n",
     "        \"\"\"\n",
-    "        cars_in_traffic_light = [car.waiting_time for car in self.model.cars[(self.id - 1) * int(self.p.cars / 4) : (self.id) * int(self.p.cars / 4)]]\n",
+    "        cars_in_traffic_light = [car.waiting_time for car in self.model.cars[self.p.cars_per_direction_index[self.id - 1] - self.p.cars_per_direction[self.id - 1] + 1: self.p.cars_per_direction_index[self.id - 1] + 1]]\n",
     "        return np.mean(cars_in_traffic_light)\n",
     "    \n",
     "    def vote(self, times: list) -> int:\n",
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +312,7 @@
     "        # definir los semáforos dentro de la simulación\n",
     "        self.trafficAgents = ap.AgentList(self, self.p.traffic_lights, TrafficLight)\n",
     "        self.trafficAgents.step_time = self.p.step_time\n",
-    "        self.trafficAgents.state = ap.AttrIter([2, 2, 2, 2])\n",
+    "        self.trafficAgents.state = ap.AttrIter([0, 0, 2, 2])\n",
     "        self.trafficAgents.update_state()\n",
     "        self.trafficAgents[0].direction = np.array([0, 1])\n",
     "        self.trafficAgents[1].direction = np.array([0, -1])\n",
@@ -326,11 +325,12 @@
     "        self.cars.lane = ap.AttrIter(self.p.lanes)\n",
     "\n",
     "        # Definir la posición de inicio de los autos\n",
-    "        cars_per_direction = int(self.p.cars / 4)\n",
+    "        cars_per_direction = self.p.cars_per_direction\n",
+    "        cars_per_direction_index = self.p.cars_per_direction_index\n",
     "\n",
-    "        for iter, direction in zip(range(4), [[0, -1], [0, 1], [-1, 0], [1, 0]]):\n",
-    "            for k in range(cars_per_direction):\n",
-    "                self.cars[k + (iter * cars_per_direction)].direction = direction\n",
+    "        for iter, direction, cpd, cpdi in zip(range(4), [[0, -1], [0, 1], [-1, 0], [1, 0]], cars_per_direction, cars_per_direction_index):\n",
+    "            for k in range(cpd):\n",
+    "                self.cars[k + (cpdi - cpd + 1)].direction = direction\n",
     "\n",
     "        # Inicializa el entorno\n",
     "        self.avenue = ap.Space(self, shape=[self.p.size, self.p.size], torus=True)\n",
@@ -346,20 +346,20 @@
     "        lane_positions = [0, -11.1, -8.3, -5.5, 0, 5.5, 8.3, 11.1, 0][::-1]\n",
     "        self.avenue.add_agents(self.cars, random=True)\n",
     "        \n",
-    "        for iter in range(4):\n",
-    "            for k in range(cars_per_direction):\n",
+    "        for iter, cpd, cpdi in zip(range(4), cars_per_direction, cars_per_direction_index):\n",
+    "            for k in range(cpd):\n",
     "                if iter == 0:\n",
     "                    # carros que van bajando\n",
-    "                    self.avenue.move_to(self.cars[k + (iter * cars_per_direction)], [lane_positions[self.cars[k + (iter * cars_per_direction)].lane] + 500, 15 * (k + 1)])\n",
+    "                    self.avenue.move_to(self.cars[k + (cpdi - cpd + 1)], [lane_positions[self.cars[k + (cpdi - cpd + 1)].lane] + 500, 15 * (k + 1)])\n",
     "                elif iter == 1:\n",
     "                    # carros que van subiendo\n",
-    "                    self.avenue.move_to(self.cars[k + (iter * cars_per_direction)], [lane_positions[self.cars[k + (iter * cars_per_direction)].lane] + 500, self.p.size - 15 * (k + 1)])\n",
+    "                    self.avenue.move_to(self.cars[k + (cpdi - cpd + 1)], [lane_positions[self.cars[k + (cpdi - cpd + 1)].lane] + 500, self.p.size - 15 * (k + 1)])\n",
     "                elif iter == 2:\n",
     "                    # carros que van a la derecha\n",
-    "                    self.avenue.move_to(self.cars[k + (iter * cars_per_direction)], [15 * (k + 1), lane_positions[self.cars[k + (iter * cars_per_direction)].lane] + 500])\n",
+    "                    self.avenue.move_to(self.cars[k + (cpdi - cpd + 1)], [15 * (k + 1), lane_positions[self.cars[k + (cpdi - cpd + 1)].lane] + 500])\n",
     "                elif iter == 3:\n",
     "                    # carros que van a la izquierda\n",
-    "                    self.avenue.move_to(self.cars[k + (iter * cars_per_direction)], [self.p.size - 15 * (k + 1), lane_positions[self.cars[k + (iter * cars_per_direction)].lane] + 500])\n",
+    "                    self.avenue.move_to(self.cars[k + (cpdi - cpd + 1)], [self.p.size - 15 * (k + 1), lane_positions[self.cars[k + (cpdi - cpd + 1)].lane] + 500])\n",
     "\n",
     "\n",
     "\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,31 +471,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "parameters = {\n",
-    "    'step_time': 1 / 24,                # Paso de tiempo\n",
-    "    \"traffic_lights\": 4,                # Número de semáforos\n",
-    "    \"traffic_times\": [5, 2, 7],         # Tiempos de cada estado (green, yellow, red)\n",
-    "    \"steps\": 700,                      # Número de pasos\n",
-    "    \"size\": 1000,                       # Tamaño del entorno\n",
-    "    \"cars\": 120,                        # Número de autos\n",
-    "    \"cars_per_direction\": [50, 50, 10, 10],\n",
-    "    \"cars_per_direction_index\": [49, 99, 109, 119],\n",
-    "    \"lane_size\": 20,                    # tamaño del carril\n",
+    "    'step_time': 1 / 24,                    # Paso de tiempo\n",
+    "    \"traffic_lights\": 4,                    # Número de semáforos\n",
+    "    \"traffic_times\": [4, 2, 6],             # Tiempos de cada estado (green, yellow, red)\n",
+    "    \"steps\": 2000,                          # Número de pasos\n",
+    "    \"size\": 1000,                           # Tamaño del entorno\n",
+    "    \"cars_per_direction\": [50, 30, 1, 10],  # número de carros por dirección\n",
+    "    \"lane_size\": 20,                        # tamaño del carril\n",
     "    \"lanes\": []\n",
     "}\n",
-    "parameters['lanes'].extend(np.random.randint(1, 3+1, int(parameters['cars_per_direction'])))\n",
-    "parameters['lanes'].extend(np.random.randint(5, 7+1, int(parameters['cars_per_direction'])))\n",
-    "parameters['lanes'].extend(np.random.randint(5, 7+1, int(parameters['cars_per_direction'])))\n",
-    "parameters['lanes'].extend(np.random.randint(1, 3+1, int(parameters['cars_per_direction'])))\n"
+    "parameters['lanes'].extend(np.random.randint(1, 3+1, int(parameters['cars_per_direction'][0])))\n",
+    "parameters['lanes'].extend(np.random.randint(5, 7+1, int(parameters['cars_per_direction'][1])))\n",
+    "parameters['lanes'].extend(np.random.randint(5, 7+1, int(parameters['cars_per_direction'][2])))\n",
+    "parameters['lanes'].extend(np.random.randint(1, 3+1, int(parameters['cars_per_direction'][3])))\n",
+    "parameters['cars'] = sum(parameters['cars_per_direction'])\n",
+    "temp = 0\n",
+    "temp_array = []\n",
+    "for i in range(4):\n",
+    "    temp_array.append(parameters['cars_per_direction'][i] + temp - 1)\n",
+    "    temp += parameters['cars_per_direction'][i]\n",
+    "parameters['cars_per_direction_index'] = temp_array\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,23 +521,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed: 167 stepsupdated light 1 to green\n",
-      "updated light 2 to green\n",
-      "Completed: 335 stepsupdated light 3 to green\n",
-      "updated light 4 to green\n",
-      "Completed: 503 stepsupdated light 1 to green\n",
-      "updated light 2 to green\n",
-      "Completed: 671 stepsupdated light 3 to green\n",
-      "updated light 4 to green\n",
-      "Completed: 700 steps\n",
-      "Run time: 0:00:02.742980\n",
+      "Completed: 2000 steps\n",
+      "Run time: 0:01:04.251483\n",
       "Simulation finished\n"
      ]
     }
@@ -543,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
