added variation to max-speeds

--- a/reto/model.ipynb
+++ b/reto/model.ipynb
@@ -175,7 +175,7 @@
     "        self.speed = 0\n",
     "\n",
     "        # Máxima velocidad en metros por segundo\n",
-    "        self.max_speed = 4.0\n",
+    "        self.max_speed = np.random.normal(loc=4.0, scale=0.5, size=1)[0]\n",
     "\n",
     "        # Estados del carro: 1 = ok, 0 = dead (choque)\n",
     "        self.state = 1\n",
@@ -529,7 +529,7 @@
      "output_type": "stream",
      "text": [
       "Completed: 2000 steps\n",
-      "Run time: 0:01:04.251483\n",
+      "Run time: 0:01:03.027758\n",
       "Simulation finished\n"
      ]
     }
