--- a/reto/model.ipynb
+++ b/reto/model.ipynb
@@ -269,7 +269,7 @@
     "            self.speed = np.maximum(self.speed - 80 * self.step_time, 0)\n",
     "\n",
     "        # hay luz amarilla muy cerca\n",
-    "        elif min_trafficLight_distance < 25 and trafficLight_state == 1:\n",
+    "        elif min_trafficLight_distance < 15 and trafficLight_state == 1:\n",
     "            self.speed = np.minimum(self.speed + 30 * self.step_time, self.max_speed)\n",
     "\n",
     "        # hay luz amarilla\n",
@@ -379,8 +379,8 @@
     "        \n",
     "        # realizar la votación\n",
     "        if self.global_time > self.p.traffic_times[-1]:\n",
-    "            \n",
-    "            winner = int(Counter(self.trafficAgents.vote(self.trafficAgents.total_waiting_time())).most_common(1)[0][0])\n",
+    "            candidates = list(np.multiply(np.array(self.trafficAgents.total_waiting_time()), np.array([x/self.p.cars for x in self.p.cars_per_direction])))\n",
+    "            winner = int(Counter(self.trafficAgents.vote(candidates)).most_common(1)[0][0])\n",
     "            \n",
     "            \n",
     "            if winner in [0, 1]:\n",
@@ -481,7 +481,7 @@
     "    \"traffic_times\": [4, 2, 6],             # Tiempos de cada estado (green, yellow, red)\n",
     "    \"steps\": 2000,                          # Número de pasos\n",
     "    \"size\": 1000,                           # Tamaño del entorno\n",
-    "    \"cars_per_direction\": [50, 25, 18, 25], # número de carros por dirección\n",
+    "    \"cars_per_direction\": [50, 35, 5, 5],   # número de carros por dirección\n",
     "    \"lane_size\": 20,                        # tamaño del carril\n",
     "    \"lanes\": []\n",
     "}\n",
@@ -529,7 +529,7 @@
      "output_type": "stream",
      "text": [
       "Completed: 2000 steps\n",
-      "Run time: 0:02:16.684883\n",
+      "Run time: 0:01:53.801689\n",
       "Simulation finished\n"
      ]
     }
@@ -544,7 +544,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./data.json', 'w') as file:\n",
+    "with open('./Simulation/data.json', 'w') as file:\n",
     "    json.dump(information, file, indent=0, sort_keys=True, separators=(',', ':'), ensure_ascii=False, cls=NumpyEncoder)\n"
    ]
   },
